applications/repo-hk/deployment.yaml
# Deployment for repo service
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: repo-server
spec:
  strategy:
    # NOTE(tommylikehu): The strategy is recreate due to the multi-write issues if we running new pods while old one stays terminating.
    type: Recreate
  template:
    metadata:
      labels:
        app: repo-nginx-pod
    spec:
      containers:
        - name: repo-nginx
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/nginx-extras:1.21.0-with-fancy-templates-repo
          volumeMounts:
            - mountPath: /repo/openeuler
              name: data-volume
            - mountPath: /repo/archives
              name: archives-volume
            - mountPath: /etc/rsyncd.secrets.ro
              name: rsync-secrets-volume
              subPath: rsyncd_secrets
            - mountPath: /etc/nginx/conf/static/baidu.html
              name: repo-nginx-configmap-volume
              subPath: baidu.html
          resources:
            requests:
              cpu: 4000m
              memory: 8000Mi
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /repo/openeuler
              exec nginx -g "daemon off;"
        - name: fscrawler-client
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/fscrawler:0.0.1
          volumeMounts:
            - mountPath: /repo/openeuler
              name: data-volume
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p ~/.fscrawler/openeuler
              cp /fscrawler/_settings.yaml ~/.fscrawler/openeuler/_settings.yaml
              sed -i "s/<username>/${USERNAME}/g" ~/.fscrawler/openeuler/_settings.yaml
              sed -i "s/<password>/${PASSWORD}/g" ~/.fscrawler/openeuler/_settings.yaml
              exec fscrawler openeuler
        - name: rsync-server
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/repo-client:122abc521614802693d71f85303360a21972cefb
          volumeMounts:
            - mountPath: /repo/openeuler
              name: data-volume
            - mountPath: /root/.ssh/authorized_keys.ro
              name: repo-nginx-configmap-volume
              subPath: ssh.pub
          command:
            - /bin/sh
            - -c
            - |
              /usr/bin/rsync --daemon --config /etc/rsyncd.conf
              exec tini -- entrypoint.sh
          resources:
            requests:
              cpu: 4000m
              memory: 8000Mi
      volumes:
        - name: rsync-secrets-volume
          secret:
            secretName: rsync-secrets
        - name: data-volume
          persistentVolumeClaim:
            claimName: openeuler-data-volume
        - name: archives-volume
          persistentVolumeClaim:
            claimName: archives-repo-volume
