applications/repo-hk/rsync-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 2eb71e99-eb9e-40f1-a068-74cde8c7e7bb
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
  labels:
    app: openeuler-repo-mirror-hk
  name: rsync-service
spec:
  ports:
  - name: rsync-server-port
    port: 873
    targetPort: 873
  selector:
    app: openeuler-repo-mirror-hk
  type: LoadBalancer
