applications/repo-hk/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openeuler-repo-mirror-hk
  name: repo-service
  selector:
    app: openeuler-repo-mirror-hk
  type: ClusterIP
