applications/repo-hk/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: repo-ingress
spec:
  rules:
    - host: repo.openeuler.org
      http:
        paths:
          - backend:
              serviceName: repo-service
              servicePort: 80
            path: /
